<resources>

    <!-- app -->
    <string name="app_name">strongSwan Enterprise VPN Client</string>

    <!-- actions -->
    <string name="action_add">Add VPN profile</string>
    <string name="action_edit">Edit VPN profile</string>
    <string name="action_undo">Undo</string>

    <!-- activities -->
    <string name="activity_name_main">strongSwan</string>

    <!-- menus -->
    <string name="menu_add_vpn_profile">Add VPN profile</string>
    <string name="menu_save_vpn_profile">Save</string>

    <!-- VpnProfileDetail -->
    <string name="vpn_profile_name_hint">Profile name</string>
    <string name="vpn_profile_gateway_hint">Gateway</string>
    <string name="vpn_profile_username_hint">Username</string>
    <string name="vpn_profile_password_hint">Password</string>
    <string name="vpn_profile_certificate_hint">CA certificate alias</string>
    <string name="vpn_profile_user_certificate_hint">User certificate alias</string>
    <string name="vpn_profile_type_hint">VPN type</string>
    <string name="vpn_profile_deleted">VPN profile %1$s deleted</string>
    <string name="vpn_profile_mtu_hint">MTU</string>
    <string name="vpn_profile_port_hint">Port</string>
    <string name="vpn_profile_split_tunneling_hint">Split tunneling</string>
    <string name="vpn_profile_local_id_hint">Local ID</string>
    <string name="vpn_profile_remote_id_hint">Remote ID</string>

    <!-- VpnType -->
    <string name="vpn_type_ikev2_eap">IKEv2 EAP</string>
    <string name="vpn_type_ikev2_cert">IKEv2 Cert</string>
    <string name="vpn_type_ikev2_cert_eap">IKEv2 Cert EAP</string>
    <string name="vpn_type_ikev2_eap_tls">IKEv2 EAP/TLS</string>
    <string name="vpn_type_ikev2_byod_eap">IKEv2 BYOD EAP</string>

</resources>
